// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flag renders 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
  margin-left: -8px;
  margin-right: 16px;
}

.c1 {
  display: block;
  width: 4px;
  height: 4px;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  margin-right: -8px;
  margin-bottom: -8px;
  border-width: 4px;
  border-style: solid;
  border-color: transparent;
}

.c3 {
  display: inline-block;
  width: 18px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  min-height: 32px;
  margin-left: -10px;
  -webkit-transform: skew(-14deg);
  -ms-transform: skew(-14deg);
  transform: skew(-14deg);
}

.c2 {
  font-size: px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  border-radius: 0 0 0;
  color: white;
  background-color: green;
}

<div
  className="c0"
  width={undefined}
>
  <div
    className="c1"
    color="green"
  />
  <div
    className="c2"
    color="white"
  />
  <div
    className="c3"
    color="green"
  />
</div>
`;

exports[`Flag renders with width prop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
  margin-left: -8px;
  margin-right: 16px;
  width: 256px;
}

.c1 {
  display: block;
  width: 4px;
  height: 4px;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  margin-right: -8px;
  margin-bottom: -8px;
  border-width: 4px;
  border-style: solid;
  border-color: transparent;
}

.c3 {
  display: inline-block;
  width: 18px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  min-height: 32px;
  margin-left: -10px;
  -webkit-transform: skew(-14deg);
  -ms-transform: skew(-14deg);
  transform: skew(-14deg);
}

.c2 {
  font-size: px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  border-radius: 0 0 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  color: white;
  background-color: green;
}

<div
  className="c0"
  width={256}
>
  <div
    className="c1"
    color="green"
  />
  <div
    className="c2"
    color="white"
  />
  <div
    className="c3"
    color="green"
  />
</div>
`;
